--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'France -- Foreign relations -- Great Britain'
 - !lcsh 'France -- History -- Charles IX, 1560-1574 -- Sources'
 - !lcsh 'Great Britain -- Foreign relations -- France'
+- GITenberg
 title: "Correspondance diplomatique de Bertrand de Salignac de La Mothe Fénélon, tome\
   \ premier\r\nAmbassadeur de France en Angleterre de 1568 à 1575"
 url: http://www.gutenberg.org/ebooks/35262
